Mon Aug 17 18:32:04 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/tests/testlib.sh (init): New function.
	  (finish): Honour TEST_FAILURE_KEEP environment variable.
	* src/tests/manconv-1: Use init function. Reverse diff arguments so
	  that failure output makes more sense.

Mon Aug 17 00:56:20 BST 2009  Colin Watson  <cjwatson@debian.org>

	* NEWS: Update.

Mon Aug 17 00:38:12 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (conversion_table): New table, with contents
	  mostly borrowed from groff's preconv.
	  (convert_encoding): New function.
	  (check_preprocessor_encoding): Loop through semicolon-separated
	  tags, and convert Emacs coding tags to ones that libiconv
	  understands (Debian bug #496604).
	* src/tests/manconv-1: Test multiple tags. Test coding aliases.

Sun Aug 16 23:52:38 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/tests/testlib.sh: Add a simple test library, to be extended as
	  necessary.
	* src/tests/manconv-1: Use it.

Sun Aug 16 23:37:11 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/tests/manconv-1: Simple test for manconv's handling of
	  Emacs-style coding: tags.
	* src/tests/Makefile.am: New file.
	* src/Makefile.am (SUBDIRS): Add tests.
	* configure.ac (AC_CONFIG_FILES): Add src/tests/Makefile.
	* .bzrignore: Ignore src/tests/tmp-*.

Fri Aug 14 16:09:56 BST 2009  Colin Watson  <cjwatson@debian.org>

	* tools/chconfig: Make executable.

Fri Aug 14 12:20:16 BST 2009  Colin Watson  <cjwatson@debian.org>

	* manual/Makefile.am (install-data-hook, uninstall-hook):
	  Install/uninstall the manual into/from $(docdir).

Fri Aug 14 12:18:43 BST 2009  Colin Watson  <cjwatson@debian.org>

	* docs/Makefile.am (dist_noinst_DATA): Move NEWS to ...
	* Makefile.am (dist_noinst_DATA): ... here.

Fri Aug 14 11:50:27 BST 2009  Colin Watson  <cjwatson@debian.org>

	Move ChangeLog and NEWS to their more conventional location at the
	top level.

	* docs/ChangeLog: Move to ...
	* ChangeLog: ... here.