@@ -19,4 +19,4 @@
 ## Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 
 TESTS_ENVIRONMENT = PATH=..:$$PATH $(SHELL)
-TESTS = manconv-1
+TESTS = manconv-1 manconv-2
