@@ -1,0 +1,59 @@
+#! /bin/sh
+
+# Test manconv's handling of various odd encoding combinations.
+
+: ${srcdir=.}
+. "$srcdir/testlib.sh"
+
+: ${MANCONV=manconv}
+
+init
+
+(for x in $(seq 160 255); do
+	printf "\\x$(printf %02x "$x")"
+done
+echo) >"$tmpdir/1.inp"
+
+iconv -f ISO-8859-1 -t UTF-8 <"$tmpdir/1.inp" >"$tmpdir/1.exp"
+$MANCONV -f UTF-8:ISO-8859-1 -t UTF-8 <"$tmpdir/1.inp" >"$tmpdir/1.out"
+expect_pass '-f UTF-8:ISO-8859-1 -t UTF-8 on ISO-8859-1 input' \
+	'diff "$tmpdir/1.exp" "$tmpdir/1.out"'
+
+iconv -f ISO-8859-2 -t UTF-8 <"$tmpdir/1.inp" >"$tmpdir/1-latin2.exp"
+$MANCONV -f UTF-8:ISO-8859-2 -t UTF-8 <"$tmpdir/1.inp" >"$tmpdir/1-latin2.out"
+expect_pass '-f UTF-8:ISO-8859-2 -t UTF-8 on ISO-8859-2 input' \
+	'diff "$tmpdir/1-latin2.exp" "$tmpdir/1-latin2.out"'
+
+(for x in $(seq 1 1000); do
+	printf '‐'
+done
+echo 'Б' | iconv -f UTF-8 -t KOI8-R
+echo '‐') >"$tmpdir/2.inp"
+iconv -f KOI8-R -t UTF-8 <"$tmpdir/2.inp" >"$tmpdir/2.exp"
+$MANCONV -f UTF-8:KOI8-R -t UTF-8 <"$tmpdir/2.inp" >"$tmpdir/2.out"
+expect_pass '-f UTF-8:KOI8-R -t UTF-8 on KOI8-R input with UTF-8 prefix' \
+	'diff "$tmpdir/2.exp" "$tmpdir/2.out"'
+
+(for x in $(seq 160 255); do
+	printf "\\x$(printf %02x "$x")"
+done
+echo) | iconv -f ISO-8859-1 -t UTF-8 >"$tmpdir/3.inp"
+$MANCONV -f UTF-8:ISO-8859-1 -t UTF-8 <"$tmpdir/3.inp" >"$tmpdir/3.out"
+expect_pass '-f UTF-8:ISO-8859-1 -t UTF-8 preserves UTF-8 input' \
+	'diff "$tmpdir/3.inp" "$tmpdir/3.out"'
+
+# U+00B7 MIDDLE DOT is not representable in ISO-8859-2, and so should be
+# omitted. However, manconv should still recognise that the input was UTF-8
+# rather than falling back to ISO-8859-2.
+cat >"$tmpdir/4.inp" <<'EOF'
+š·ł
+EOF
+iconv -f UTF-8 -t ISO-8859-2 >"$tmpdir/4.exp" <<EOF
+šł
+EOF
+$MANCONV -f UTF-8:ISO-8859-2 -t ISO-8859-2//IGNORE \
+	<"$tmpdir/4.inp" >"$tmpdir/4.out"
+expect_pass 'recognises input encoding and omits invalid output character' \
+	'diff "$tmpdir/4.exp" "$tmpdir/4.out"'
+
+finish
