@@ -30,6 +30,10 @@ Major changes since man-db 2.5.5:
 	o man now sets less(1)'s environment up correctly for manual pages
 	  encoded in CP1251.
 
+	o manconv no longer confuses situations such as "this UTF-8
+	  character is not representable in the target encoding" with "this
+	  text is not in UTF-8".
+
 	Improvements:
 	-------------
 
